--- a/styles/lower-3-sections.css
+++ b/styles/lower-3-sections.css
@@ -1,7 +1,6 @@
 /* Section 5 */
 .sec5 {
-  font-family: Inter;
-  margin: 120px;
+  margin: 120px auto;
 }
 .sec5 .content {
   text-align: center;
@@ -10,41 +9,37 @@
   color: #070211;
   font-size: 24px;
   font-weight: 500;
+  line-height: 0;
 }
 .sec5 .content h1 {
   color: #070211;
-  font-family: Merriweather;
-  font-size: 72px;
-  font-weight: 900;
-  line-height: 0%;
+  /* line-height: 0%; */
 }
 .sec5 .content h1 span {
   color: #f00;
-  font-size: 72px;
-  font-weight: 900;
+ 
 }
 .sec5 .content p {
   color: rgba(7, 2, 17, 0.6);
   font-size: 20px;
   font-weight: 500;
-  padding-left: 126px;
-  padding-right: 126px;
+  padding: 0 126px;
 }
 .sec5 .images {
   position: relative;
-  margin-top: 100px;
+  margin-top: 160px;
 }
 
 .sec5 .images .image1 {
   position: relative;
   left: 20px;
-  width: 60%;
+  width: 57%;
   z-index: 3;
   bottom: 30px;
 }
 .sec5 .images .image2 {
   position: relative;
-  right: 75px;
+  /* right: px; */
   /* left: px; */
   z-index: 2;
   bottom: 275px;
@@ -62,5 +57,40 @@
   position: absolute;
   bottom: 0px;
   left: 0px;
-  /* margin: 0; */
 }
+
+/* Section 6 */
+.sec6{
+/* margin: auto; */
+}
+.sec6 .portfolio p{
+  color: rgba(7, 2, 17, 0.60);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px; /* 160% */
+  width: 896px;
+}
+.portfolio-images {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.grid-item {
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+}
+
+.grid-item img {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  transition: transform 0.3s ease-in-out;
+}
+.grid-item:hover img {
+  transform: scale(1.2);
+}
+/* Section 7 */
