--- a/styles/upper-4-sections.css
+++ b/styles/upper-4-sections.css
@@ -54,7 +54,6 @@ button:hover {
 .sec2 {
   background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
     url("../resources/Vectorrr.png") no-repeat center/cover;
-  /* width: 1320px; */
   color: #fff;
   border-radius: 16px;
   height: 600px;
@@ -86,6 +85,7 @@ button:hover {
   font-size: 20px;
   font-weight: 700;
   border: none;
+  margin-top:20px;
 }
 .sec2 button:hover {
   color: #f00;
@@ -154,11 +154,11 @@ button:hover {
   display: flex;
   justify-content: center;
   /* width: 33%; */
-  padding-right: 100px;
+  padding-right: 40px;
 }
 .sec4 .part2 img {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
   border: 15px solid #f00;
   padding: 5%;
@@ -178,7 +178,7 @@ button:hover {
   font-size: 20px;
   font-weight: 400;
   line-height: 32px;
-  width: 276px;
+  width: 350px;
 }
 /* .sec4 .part3 img {
   width: 140px;
