--- a/styles/lower-3-sections.css
+++ b/styles/lower-3-sections.css
@@ -1,29 +1,35 @@
 /* Section 5 */
+
 .sec5 {
   margin: 120px auto;
 }
+
 .sec5 .content {
   text-align: center;
 }
+
 .sec5 .content h6 {
   color: #070211;
   font-size: 24px;
   font-weight: 500;
   line-height: 0;
 }
+
 .sec5 .content h1 {
   color: #070211;
-  /* line-height: 0%; */
 }
+
 .sec5 .content h1 span {
   color: #f00;
 }
+
 .sec5 .content p {
   color: rgba(7, 2, 17, 0.6);
   font-size: 20px;
   font-weight: 500;
   padding: 0 126px;
 }
+
 .sec5 .images {
   position: relative;
   margin-top: 100px;
@@ -36,19 +42,20 @@
   z-index: 3;
   bottom: 30px;
 }
+
 .sec5 .images .image2 {
   position: relative;
-  /* right: px; */
-  /* left: px; */
   z-index: 2;
   bottom: 275px;
 }
+
 .sec5 .images .image3 {
   position: absolute;
   right: 0px;
   z-index: 1;
   bottom: 220px;
 }
+
 .sec5 .images .image4 {
   width: 100%;
   height: 220px;
@@ -64,10 +71,11 @@
   font-family: Inter;
   font-size: 20px;
   font-weight: 400;
-  line-height: 32px; /* 160% */
+  line-height: 32px;
   width: 870px;
   text-align: justify;
 }
+
 .portfolio-images {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -90,7 +98,9 @@
 .grid-item:hover img {
   transform: scale(1.2);
 }
+
 /* Section 7 */
+
 .sec7 {
   border-radius: 16px;
   background: rgba(255, 0, 0, 0.05);
@@ -99,6 +109,7 @@
   text-align: center;
   padding-top: 100px;
 }
+
 .sec7 p {
   color: rgba(7, 2, 17, 0.6);
   font-size: 20px;
@@ -107,10 +118,12 @@
   width: 896px;
   padding: 0 212px 0 212px;
 }
+
 .sec7 input {
   height: 75px;
   border: none;
 }
+
 .sec7 input[type="email"] {
   width: 500px;
   border-radius: 50px 0 0 50px;
@@ -119,6 +132,7 @@
   font-size: 18px;
   font-weight: 400;
 }
+
 .sec7 input[type="submit"] {
   width: 210px;
   border-radius: 0 50px 50px 0;
@@ -130,6 +144,7 @@
   font-weight: 600;
   margin-left: -5px;
 }
+
 .sec7 input[type="submit"]:hover {
   transform: scale(1.1);
 }
