--- a/styles/upper-4-sections.css
+++ b/styles/upper-4-sections.css
@@ -29,6 +29,13 @@ h6 {
   font-weight: 500;
 }
 
+p{
+  color: rgba(7, 2, 17, 0.6);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+}
+
 button:hover {
   cursor: pointer;
   transform: translate(2px, 2px);
@@ -155,35 +162,27 @@ button:hover {
 }
 
 /* Section 4 */
+
 .sec4 {
-  font-family: Inter;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px; 
 }
 
 .sec4 .part1 p {
   width: 393px;
-  color: rgba(7, 2, 17, 0.6);
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 32px;
-}
-
-.sec4 .part2 {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: center;
-  /* width: 33%; */
-  padding-right: 40px;
 }
 
 .sec4 .part2 img {
-  width: 400px;
-  height: 400px;
+  width: 364.844px;
+  height: 364.844px;
   border-radius: 50%;
   border: 15px solid #f00;
   padding: 5%;
+}
+
+.sec4 .part3{
+  padding-left: 50px;
 }
 
 .sec4 .part3 h3 {
@@ -195,14 +194,5 @@ button:hover {
 }
 
 .sec4 .part3 p {
-  color: rgba(7, 2, 17, 0.6);
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 32px;
   width: 350px;
-}
-
-/* .sec4 .part3 img {
-  width: 140px;
-  height: 140px;
-} */
+} 
